# my_notes

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  env.example
back/: __init__.py  app.py  cli.py  config.py  pyproject.toml
back/alembic/versions/: 7b5c4507df18_add_category_image_url.py  f2f4144625f5_init_db.py
back/api/: __init__.py  category.py  folder.py  health.py  notes.py
back/data/: categories.txt  folders.txt
back/data/notes/: python_is_nice.json  react_is_nice.json  redux_is_nice.json
back/docker/back/: Dockerfile-prod
back/docker/nginx/: nginx-dev.conf
back/extensions/: logging.py
back/models/: __init__.py  category.py  db.py  folder.py  helper.py  note.py
back/schemas/: __init__.py  base.py  category.py  folder.py  note.py
back/scripts/: populate.py
front/: package-lock.json  package.json
front/docker/: Dockerfile-dev
front/public/: index.html  manifest.json
front/src/: App.css  App.js  api.js  defs.js  index.js  utils.js
front/src/components/: categories.css  categories.js  folders.css  folders.js  note.css  note.js
front/src/components/category/: component.js  index.js  style.css
front/src/components/folder/: component.js  index.js  style.css
front/src/components/header/: component.js  index.js
front/src/components/home/: component.js  index.js  style.css
front/src/components/note/: component.js  index.js  style.css
front/src/containers/: categories.js  category.js  folder.js  header.js  home.js  note.js
front/src/redux/: schemas.js  selectors.js
(+10 files in other folders)
