[tool.poetry]
name = "jgourinda"
version = "0.1.0"
description = ""
authors = ["Jamal Gourinda <jamal.gourinda.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
sqlalchemy = "^1.2"
psycopg2-binary = "^2.7"
alembic = "^1.0"
marshmallow = "^2.18"
marshmallow_enum = "^1.4"
flask-cors = "^3.0"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
ipython = "^7.2"
ipdb = "^0.11.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

